--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@ant-design/icons": "^5.6.1",
     "@ant-design/nextjs-registry": "^1.1.0",
     "antd": "^5.26.7",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "howler": "^2.2.4",
     "lucide-react": "^0.536.0",
+    "mongodb": "^6.18.0",
     "next": "15.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-h5-audio-player": "^3.10.0",
+    "react-use-downloader": "^1.2.10",
     "swiper": "^11.2.10",
     "zustand": "^5.0.7"
   },
