更新接口为本地接口,修复一系列bug

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "howler": "^2.2.4",
     "lucide-react": "^0.536.0",
     "mongodb": "^6.18.0",
